# c_csv_to_json

./: .gitignore  BUILD_INSTRUCTIONS.md  README_BUILD.md  README_CI.md  build_linux.sh  build_windows.bat  fix_app_zip.ps1  flet.json  main.py  pyproject.toml  rebuild_log.txt
.github/workflows/: build-simple.yml  build.yml
src/csvjsonapp/: __init__.py  __main__.py  app.py  csv_reader.py  interfaces.py  json_generator.py  json_writer.py  logger.py  photo_finder.py  template.json  template_loader.py  template_processor.py
